# sunSensers

./: CMakeLists.txt  converttojson.cpp  converttojson.h  main.cpp  main.qml  main.txt  repomix-output.xml  reportgenerator.cpp  reportgenerator.h  results.txt  sensormanager.cpp  sensormanager.h  sensormodel.cpp  sensormodel.h  sensormodel.txt
